2002-06-12  Glynn Foster  <glynn.foster@sun.com>

	* src/callbacks.c: Set the browse dialog as transient for
	the parent window.

2002-06-10  Malcolm Tredinnick <malcolm@commsecure.com.au>

        * src/menus.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK 
	since that makes translations actually work. _UI_SUBTREE_STOCK 
	means that the string comes from libgnomeui which in these cases
	it doesn't.
	
2002-06-01  Ross Burton  <ross@hactar>

	* src/interface.c (main_app_create_ui): Pass a reference to the
	top-level window as the user_data to the menu callbacks.

	* src/callbacks.c (cb_about_click): Set the about window as
	transient for the parent window. Fixes #83799.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>
	
	* src/Makefile.am: Updated patch for #83627.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* src/Makefile.am: Fix GNOMELOCALEDIR to point to correct
	place. Fixes #83627.

2002-05-11  Glynn Foster  <glynn.foster@sun.com>

	* src/callbacks.c, src/callbacks.h, 
	src/interface.c, src/interface.h: Incredible hacks to 
	set the sensitivity of the edit menu.

2002-05-07  Satyajit Kanungo  <satyajit.kanungo@wipro.com>

	* gnome-character-map.desktop.in: Added DocPath in the 
	desktop.in file. Fixes #80921.

2002-05-07  Ali Akcaagac <ali.akcaagac@stud.fh-wilhelmshaven.de> 

	* src/menus.c: Remove seperator from Help menu. Fixes #80828.

2002-05-02  Carlos Perello Marin <carlos@gnome-db.org>

	* Makefile.am: Small schemas fix ;-)

2002-05-02  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Remove schemas from build. Stupid connection.

2002-05-02  Glynn Foster  <glynn.foster@sun.com>

	* gcharmap.schemas, src/Makefile.am, src/asciiselect.c,
	  src/callbacks.c, src/callbacks.h, src/interface.c, 
	  src/interface.h, src/main.c, src/menus.c, src/menus.h,
	  src/notifiers.c: Some small UI changes. Remove the 'View'
	  and 'Settings' Menu as they made no sense at all. Add some
	  icons and generally make pretty. Fixes #76424 and #75909.