@@ -1,3 +1,9 @@
+2002-07-01  Mats-Ole Persson <polli@hadjaha.org>
+
+	* src/callbacks.c, src/callbacks.h, src/interface.c: Enabled
+	'Clear' and 'Select All' when inputing characters from the
+	keyboard. Fixes #86036.
+
 2002-06-12  Glynn Foster  <glynn.foster@sun.com>
 
 	* src/callbacks.c: Set the browse dialog as transient for
